<resources>
    <string name="app_name">Currency Convert</string>

    <!--LOG IN ACT. Strings-->
    <string name="LOGIN_user_name">USER NAME</string>
    <string name="LOGIN_password">PASSWORD</string>
    <string name="LOGIN_remember_me">Remember Me</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account ? Sign-Up</string>
    <string name="btn_login">LOGIN</string>
    <!--END OF LOG IN ACT. Strings-->


    <!--SIGN UP ACT. Strings-->
    <string name="txt_HEADER_sign_up">SIGN UP</string>
    <string name="SIGNUP_mail">Mail :</string>
    <string name="enter_your_mail">Enter Your Mail</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="age">Age :</string>
    <string name="enter_your_age">Enter Your age</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="password">Password :</string>
    <string name="user_name">User Name :</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="phone_no">Phone No. :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_up">SIGN UP</string>
    <!--END OF SIGN UP ACT. Strings-->

    <!--HOME ACT. Strings-->
    <string name="your_page">Your Page</string>
    <string name="currency_exchange">Currency Exchange</string>
    <string name="bitcoin">Bitcoin</string>
    <!--END OF HOME ACT. Strings-->

    <!--USER ACT Strings-->
    <string name="log_out">LOG OUT</string>
    <!--END OF USER ACT. Strings-->

    <!--BTC ACT. Strings-->
    <string name="btc_vs_currencies">BTC vs Currencies</string>
    <string name="to"><![CDATA[<==>]]></string>
    <string name="BTC_convert_Button">Convert</string>
    <!--END OF BTC ACT. Strings-->

    <!--CEX ACT. Strings-->
    <string name="EXAct_currency_exchange">Currency Exchange</string>
    <string name="convert">Convert</string>
    <string name="usd_to"><![CDATA[USD TO =>]]></string>
    <string name="from">FROM</string>
    <string name="TOAnother">TO</string>
    <!--END OF CEX ACT. Strings-->


    <!--
    <string-array name="currency">
        <item>SELECT CURRENCY</item>
        <item>USD</item>
        <item>JOD</item>
        <item>ILS</item>
        <item>KWD</item>
        <item>BHD</item>
        <item>OMR</item>
        <item>KYD</item>
        <item>GBP</item>
        <item>EUR</item>
        <item>CHF</item>
        <item>BSD</item>
        <item>PAB</item>
        <item>BMD</item>
        <item>CAD</item>
        <item>SGD</item>
        <item>BND</item>
        <item>AUD</item>
        <item>NZD</item>
        <item>BGN</item>
        <item>FJD</item>
        <item>BRL</item>
    </string-array>
    -->
    <string-array name="currencyEX_BTC">
        <item>SELECT CURRENCY</item>
        <item>USD</item>
        <item>JOD</item>
        <item>ILS</item>
        <item>AED</item>
        <item>AFN</item>
        <item>ALL</item>
        <item>AMD</item>
        <item>ANG</item>
        <item>AOA</item>
        <item>ARS</item>
        <item>AUD</item>
        <item>AWG</item>
        <item>AZN</item>
        <item>BAM</item>
        <item>BBD</item>
        <item>BDT</item>
        <item>BGN</item>
        <item>BHD</item>
        <item>BIF</item>
        <item>BMD</item>
        <item>BND</item>
        <item>BOB</item>
        <item>BRL</item>
        <item>BSD</item>
        <item>BTN</item>
        <item>BWP</item>
        <item>BYN</item>
        <item>BZD</item>
        <item>CAD</item>
        <item>CDF</item>
        <item>CHF</item>
        <item>CLP</item>
        <item>CNY</item>
        <item>COP</item>
        <item>CRC</item>
        <item>CUP</item>
        <item>CVE</item>
        <item>CZK</item>
        <item>DJF</item>
        <item>DKK</item>
        <item>DOP</item>
        <item>DZD</item>
        <item>EGP</item>
        <item>ERN</item>
        <item>ETB</item>
        <item>EUR</item>
        <item>FJD</item>
        <item>FKP</item>
        <item>FOK</item>
        <item>GBP</item>
        <item>GEL</item>
        <item>GGP</item>
        <item>GHS</item>
        <item>GIP</item>
        <item>GMD</item>
        <item>GNF</item>
        <item>GTQ</item>
        <item>Gyd</item>
        <item>HKD</item>
        <item>HNL</item>
        <item>HRK</item>
        <item>HTG</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>IMP</item>
        <item>INR</item>
        <item>IQD</item>
        <item>IRR</item>
        <item>ISK</item>
        <item>JEP</item>
        <item>JMD</item>
        <item>JPY</item>
        <item>KES</item>
        <item>KGS</item>
        <item>KHR</item>
        <item>KID</item>
        <item>KMF</item>
        <item>KRW</item>
        <item>KWD</item>
        <item>KYD</item>
        <item>KZT</item>
        <item>LAK</item>
        <item>LBP</item>
        <item>LKR</item>
        <item>LRD</item>
        <item>LSL</item>
        <item>LYD</item>
        <item>MAD</item>
        <item>MDL</item>
        <item>MGA</item>
        <item>MKD</item>
        <item>MMK</item>
        <item>MNT</item>
        <item>MOP</item>
        <item>MRU</item>
        <item>MUR</item>
        <item>MVR</item>
        <item>MWK</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>MZN</item>
        <item>NAD</item>
        <item>NGN</item>
        <item>NIO</item>
        <item>NOK</item>
        <item>NPR</item>
        <item>NZD</item>
        <item>OMR</item>
        <item>PAB</item>
        <item>PEN</item>
        <item>PGK</item>
        <item>PHP</item>
        <item>PKR</item>
        <item>PLN</item>
        <item>PYG</item>
        <item>QAR</item>
        <item>RON</item>
        <item>RSD</item>
        <item>RUB</item>
        <item>RWF</item>
        <item>SAR</item>
        <item>SBD</item>
        <item>SCR</item>
        <item>SDG</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>SHP</item>
        <item>SLE</item>
        <item>SLL</item>
        <item>SOS</item>
        <item>SRD</item>
        <item>SSP</item>
        <item>STN</item>
        <item>SYP</item>
        <item>SZL</item>
        <item>THB</item>
        <item>TJS</item>
        <item>TMT</item>
        <item>TND</item>
        <item>TOP</item>
        <item>TRY</item>
        <item>TTD</item>
        <item>TVD</item>
        <item>TWD</item>
        <item>TZS</item>
        <item>UAH</item>
        <item>UGX</item>
        <item>UYU</item>
        <item>UZS</item>
        <item>VES</item>
        <item>VND</item>
        <item>VUV</item>
        <item>WST</item>
        <item>XAF</item>
        <item>XCD</item>
        <item>XDR</item>
        <item>XOF</item>
        <item>XPF</item>
        <item>YER</item>
        <item>ZAR</item>
        <item>ZMW</item>
        <item>ZWL</item>
    </string-array>

</resources>