<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ConstraintLayOut_Styles"
    tools:context=".LogInActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="291dp"
        android:layout_height="267dp"
        android:src="@drawable/ex"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034" />


    <EditText
        android:id="@+id/edtLogInUserName"
        style="@style/EDT_LOGIN_SIGNUP_STYLES"
        android:hint="@string/LOGIN_user_name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464" />

    <EditText
        android:id="@+id/edtLogInPass"
        style="@style/EDT_LOGIN_SIGNUP_STYLES"
        android:hint="@string/LOGIN_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591"
        />

    <CheckBox
        android:id="@+id/chkME"
        style="@style/txt_LOGIN"
        android:text="@string/LOGIN_remember_me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.699" />


    <Button
        android:id="@+id/btn_LOGIN"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.808"
        style="@style/btn_LOGIN_and_SIGNUP_styles" />

    <TextView
        android:id="@+id/txtCreateAccount"
        style="@style/txt_LOGIN"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.889" />


</androidx.constraintlayout.widget.ConstraintLayout>